# colormyday

./: .gitignore  AUTHORS  README.md  autogen.sh  configure.ac  configure~  documentation.txt
docs/: Makefile.am  colormyday.1  documentation.txt
src/: Makefile  Makefile.am  colormyday  colormyday.c  colormyday.h  core_data.c  core_errors.c  core_io.c  core_llist.c  core_options.c  core_utils.c  data.c  display.c  gui.c  gui.h  gui_curses.c  gui_data.c  gui_errors.c  gui_input.c  gui_io.c  gui_llist.c  gui_options.c  gui_tick.c  gui_utils.c  input.c  io.c  misc_hacks.c  script.c  script_errors.c  tick.c  utils.c
