bin_PROGRAMS = colormyday

AM_CPPFLAGS = -Wall -Wextra -g -std=c11 -pedantic \
	-Wmissing-prototypes @xmlcflags@ \
	-Wstrict-prototypes -Wshadow -Wpointer-arith \
	-Wcast-qual

colormyday_SOURCES = \
	colormyday.c \
	core_data.c \
	core_errors.c \
	core_io.c \
	core_utils.c \
	core_options.c \
	core_llist.c \
	gui.c \
	gui_data.c \
	gui_curses.c \
	gui_input.c \
	gui_io.c \
	gui_options.c \
	gui_tick.c \
	gui_utils.c \
	gui_errors.c \
	gui_llist.c \
	misc_hacks.c \
	script.c \
	script_errors.c



